hphp/test/zend/bad/Zend/tests/offset_assign.php
<?php
$x = "a";
$x['x']['y'] += 1; 

echo "Done\n";
?>